Fixed connection string and changed how the solution name and prefixes are generated. Fixed namespace

--- a/templates/plugin/plugin.csproj/1.csproj
+++ b/templates/plugin/plugin.csproj/1.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>Clade.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Plugin.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CrmSdk.CoreAssemblies" Version="9.0.2.45" />
