Fixed the tsconfig and eslint not being added to code, fixed the credential manager creator when openign a project, made the restore dependecies async, added error logging and management for build webresources/deploy

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,7 +7,7 @@ src/**
 .yarnrc
 webpack.config.js
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
+tsconfig.json
+.eslintrc.json
 **/*.map
 **/*.ts
