--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       with:
         node-version: 16.x
     - run: npm install
-    - run: xvfb-run -a npm test
-      if: runner.os == 'Linux'
-    - run: npm test
-      if: runner.os != 'Linux'
+#     - run: xvfb-run -a npm test
+#       if: runner.os == 'Linux'
+#     - run: npm test
+#       if: runner.os != 'Linux'
     - name: Publish
       if: success() && startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
       run: npm run deploy
