--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -22,7 +22,7 @@ jobs:
 #     - run: npm test
 #       if: runner.os != 'Linux'
     - name: Publish
-      if: success() && startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
+      if: success()
       run: npm run deploy
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
